--- a/Paper.Rmd
+++ b/Paper.Rmd
@@ -1,11 +1,20 @@
 ---
-title: "Assimilating disturbance: Toward real-time monitoring and forecasting"
+title: |
+    | Ecological Applications
+    | Article
+    | Assimilating disturbance: Toward real-time monitoring and forecasting
 author:
-  - Michael C. Dietze, Earth and Environment, Boston University, Boston, MA
-  - Shawn P. Serbin, Environmental and Climate Sciences Department, Brookhaven National Laboratory, Upton, NY
-  - Robert Kennedy, Geography, Environmental Sciences, and Marine Resource Management, Oregon State University, Corvallis, OR
-  - Beverly E. Law, Forest Ecosystems & Society, Oregon State University, Corvallis, OR
-date: '`r Sys.Date()`'
+  - Michael C. Dietze 1
+  - Shawn P. Serbin 2
+  - Robert Kennedy 3
+  - Beverly E. Law 4
+  - 1 - Earth and Environment, Boston University, Boston, MA
+  - 2 - Environmental and Climate Sciences Department, Brookhaven National Laboratory, Upton, NY
+  - 3 - Geography, Environmental Sciences, and Marine Resource Mgmt, Oregon State University, Corvallis, OR
+  - 4 - Forest Ecosystems & Society, Oregon State University, Corvallis, OR
+  - Corresponding Author = Michael C. Dietze
+#date: '`r Sys.Date()`'
+keywords: Disturbance detection, Ensemble Data Assimilation, Natural Climate Solutions, Carbon Cycle
 header-includes:
     - \usepackage{setspace}\doublespacing
     - \usepackage[left]{lineno}
@@ -14,12 +23,17 @@ output:
   bookdown::pdf_document2: 
     fig_caption: yes
     number_sections: yes
-    toc: yes
+    toc: no
     keep_tex: true
   bookdown::html_document2: 
     fig_caption: yes
     number_sections: yes
     toc: yes
+    keep_tex: true
+  bookdown::word_document2: 
+    fig_caption: yes
+    number_sections: yes
+    toc: no
     keep_tex: true
 bibliography: bibliography.bibtex
 ---
@@ -27,14 +41,26 @@ bibliography: bibliography.bibtex
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+*Open Research Statement:*
+
+Data are already published and publicly available, with those publications properly cited in this submission. Data sets used for this research are as follows:
+
+* The Landtrendr aboveground biomass product [@Kennedy2018] and disturbance product [@KENNEDY2015] for tile h03v04 was downloaded from http://emapr.ceoas.oregonstate.edu/pages/data/viz/index.html.
+* The 2001 National Land Cover Dataset [@HOOPER2018] is available from https://www.mrlc.gov/.
+* DayMet meteorological data [@thornton2021] were downloaded using the daymetr R package [@daymetr].
+* Ameriflux eddy covariance data and supplemental BADM (Biological, Ancillary, Disturbance, and Management) metadata for site US-ME2 [@van2005, @berner2016] were downloaded from https://ameriflux.lbl.gov/.
+ 
+This submission uses novel code, which is provided, per our requirements, in an external repository to be evaluated during the peer review process. Code is available at https://github.com/mdietze/DisturbAssim
+
 \newpage
 
 # Abstract {-}
 
-1. Current approaches to bottom-up disturbance monitoring rely heavily on the detection of land-use, land-use change, and forestry through remote sensing, but often account for ecosystem impacts using simple look-up tables. By contrast, process models are frequently used to analyze and predict disturbance dynamics in greater mechanistic detail. Once observations are available, however, we need to update model predictions, especially for stochastic processes such as disturbance. State data assimilation (SDA) is designed specifically to update predictions, nudging modeled states back toward reality in proportion to the uncertainties in the model and the data, but current SDA algorithms are designed to update continuous states, not discrete disturbances.
-2. Here we develop a new Bayesian SDA algorithm that combines a discrete Multinomial state-and-transition framework with conventional ensemble filtering SDA approaches. To demonstrate the potential for assimilating disturbance, we applied the Multinomial SDA to the Very Simple Ecosystem Model (VSEM), performing both simulated data experiments with known disturbances and testing the algorithm against real-world disturbances detected in the LandTrender data product for central Oregon.
-3. With simulated disturbance we not only demonstrate the ability to detect discrete disturbance events but also to avoid false positives. We also demonstrated the ability to fuse multiple data types to successfully distinguish different disturbance types, and to probabilistically capture vegetation type ‘switching’ events within the assimilation and ensemble forecast. To apply this to real-world data we selected 356 conifer forest sites for testing, using the Landtrendr disturbance product to stratify by four disturbance types (cut, burn, pest, and other). We then assimilated the 30m Landtrendr annual aboveground biomass product from 1990-2017 and assessed the rate of disturbance detection. With just AGB, our assimilation was sensitive to disturbances that reduced biomass by >1.5 kg/m2 but underpredicted defoliation disturbances, which could be improved by including LAI in the assimilation.
-4. Moving forward, the SDA framework provides an exciting opportunity to fuse multiple data sources to holistically improve real-time disturbance detection, impact assessment (e.g. carbon sequestration), and forecasts of both disturbance events and post-disturbance recovery within a single integrated system.
+Current approaches to bottom-up disturbance monitoring rely heavily on the detection of land-use, land-use change, and forestry through remote sensing, but often account for ecosystem impacts using simple look-up tables. By contrast, process models are frequently used to analyze and predict disturbance dynamics in greater mechanistic detail. Once observations are available, however, we need to update model predictions, especially for stochastic processes such as disturbance. State data assimilation (SDA) is designed specifically to update predictions, nudging modeled states back toward reality in proportion to the uncertainties in the model and the data, but current SDA algorithms are designed to update continuous states, not discrete disturbances.
+Here we develop a new Bayesian SDA algorithm that combines a discrete Multinomial state-and-transition framework with conventional ensemble filtering SDA approaches. To demonstrate the potential for assimilating disturbance, we applied the Multinomial SDA to the Very Simple Ecosystem Model (VSEM), performing both simulated data experiments with known disturbances and testing the algorithm against real-world disturbances detected in the LandTrender data product for central Oregon.
+With simulated disturbance we not only demonstrate the ability to detect discrete disturbance events but also to avoid false positives. We also demonstrated the ability to fuse multiple data types to successfully distinguish different disturbance types, and to probabilistically capture vegetation type ‘switching’ events within the assimilation and ensemble forecast. To apply this to real-world data we selected 356 conifer forest sites for testing, using the Landtrendr disturbance product to stratify by four disturbance types (cut, burn, pest, and other). We then assimilated the 30m Landtrendr annual aboveground biomass product from 1990-2017 and assessed the rate of disturbance detection. With just AGB, our assimilation was sensitive to disturbances that reduced biomass by >1.5 kg/m2 but underpredicted defoliation disturbances, which could be improved by including LAI in the assimilation.
+Moving forward, the SDA framework provides an exciting opportunity to fuse multiple data sources to holistically improve real-time disturbance detection, impact assessment (e.g. carbon sequestration), and forecasts of both disturbance events and post-disturbance recovery within a single integrated system.
 
 \newpage
 
@@ -79,7 +105,18 @@ MCD and SPS were supported by funds from NASA (20-CMS20-0030, 16-CMS16-0007), wh
 RK was supported by NASA grants NNX16AQ25G and NN12AP76G.
 We would like to thank members of MCD's Ecological Forecasting lab (Alexis Helgeson, Charlotte Malmborg, Zoey Werbin, Dongchen Zhang) for input they provided on the draft manuscript.
 
-# Bibliography
+# Author Contributions
+
+MCD: Conceptualization, funding acquisition, model and software development, analysis, original draft, reviewing and editing of writing. SPS: Conceptualization, funding acquisition, and review and editing of writing. RK and BEL: Data generation and curation, review and editing of writing.
+
+# Conflict of Interest Statement
+
+The authors certify that they have no affiliations with or involvement in any
+organization or entity with any financial or non-financial interest in
+the subject matter or materials discussed in this manuscript.
+
+\newpage
+# References
 
 <div id="refs"></div>
 \newpage
